[tool.poetry]
name = "python-reproduce"
version = "0.1.0"
description = ""
authors = ["Timo Reymann <timo.reymann@deepl.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.3.0"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
